--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.scss">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>scss</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <a href="" class="link"
+      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsum
+      velit, omnis incidunt quibusdam voluptatem sint quod cupiditate nemo,
+      placeat doloremque. Voluptate aut quibusdam asperiores ad eius illum sit
+      provident?</a
+    >
+  </body>
 </html>
