--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
-    <title>scss</title>
   </head>
-  <body>
-    <a href="" class="link"
-      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ipsum
-      velit, omnis incidunt quibusdam voluptatem sint quod cupiditate nemo,
-      placeat doloremque. Voluptate aut quibusdam asperiores ad eius illum sit
-      provident?</a
-    >
-  </body>
+  <body></body>
+  <a class="link" href="">-- </a>
+  <br />
+  <p>
+    <span id="a">
+      a
+      <span id="b"
+        >b
+        <span id="c"
+          >c
+          <span>0</span>
+        </span>
+      </span>
+    </span>
+  </p>
 </html>
