--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
-  <a class="link" href="">-- </a>
-  <br />
-  <p>
-    <span id="a">
-      a
-      <span id="b"
-        >b
-        <span id="c"
-          >c
-          <span>0</span>
+  <body>
+    <a class="link" href="">-- </a>
+    <br />
+    <p>
+      <span id="a">
+        a
+        <span id="b"
+          >b
+          <span id="c"
+            >c
+            <span>0</span>
+          </span>
         </span>
       </span>
-    </span>
-  </p>
+    </p>
+  </body>
 </html>
