--- a/index.html
+++ b/index.html
@@ -1,26 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <a class="link" href="">-- </a>
-    <br />
-    <p>
-      <span id="a">
-        a
-        <span id="b"
-          >b
-          <span id="c"
-            >c
-            <span>0</span>
-          </span>
-        </span>
-      </span>
-    </p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Document</title>
+</head>
+<body>
+  <h3 class="nasha-comanda-p">
+    наша команда
+  </h3>
+      <div class="card">
+        <img src="" alt="" class="miha">
+        <p class="name">Miha</p>
+        <p class="who-is-he">Великий міха!</p>
+        <ul>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <img src="" alt="" class="miha">
+        <p class="name">Miha</p>
+        <p class="who-is-he">Великий міха!</p>
+        <ul>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <img src="" alt="" class="miha">
+        <p class="name">Miha</p>
+        <p class="who-is-he">Великий міха!</p>
+        <ul>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+          <li class="twitter">
+            <img src="./img/twitter 1.svg" alt="">
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <img src="" alt="" class="miha">
+        <p class="name">Miha</p>
+          <p class="who-is-he">Великий міха!</p>
+          <ul>
+            <li class="twitter">
+              <img src="./img/twitter 1.svg" alt="">
+            </li>
+            <li class="twitter">
+              <img src="./img/twitter 1.svg" alt="">
+            </li>
+            <li class="twitter">
+              <img src="./img/twitter 1.svg" alt="">
+            </li>
+            <li class="twitter">
+              <img src="./img/twitter 1.svg" alt="">
+            </li>
+          </ul>
+      </div>
+    </li>
+  </ul>
+</body>
 </html>
-
