--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <a class="link" href="">-- </a>
-    <br />
-    <p>
-      <span id="a">
-        a
-        <span id="b"
-          >b
-          <span id="c"
-            >c
-            <span>0</span>
-          </span>
-        </span>
-      </span>
-    </p>
-  </body>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    
+</body>
 </html>
-
