--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href=".">asa</a>
+      <nav>
+        <ul class="list">
+          <li>asa</li>
+          <li>asa</li>
+          <li>asa</li>
+          <li>asa</li>
+          <li>asa</li>
+          <li>asa</li>
+          <li>asa</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
