--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <a href=".">asa</a>
       <nav>
         <ul class="list">
@@ -20,6 +20,11 @@
           <li>asa</li>
         </ul>
       </nav>
-    </header>
+    </header> -->
+
+    <button class="buta">log in</button>
+    <button class="butb">sign up</button>
+
+
   </body>
 </html>
