--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <title>zzzz....</title>
+  </head>
+  <body>
+    <header>
+      <a href="">qwe</a>
+      <nav>
+        <ul class="list">
+          <li>asd</li>
+          <li>asd</li>
+          <li>asd</li>
+          <li>asd</li>
+          <li>asd</li>
+          <li>asd</li>
+          <li lang="ukraine">"Привіт,я Артем"</li>
+          <li lang="esp">"шось на іспанській"</li>
+        </ul>
+      </nav>
+    </header>
+
+    <button class="button">log in</button>
+    <button class="buttonB">sign up</button>
+
+    <a class="link" href="#">knasdklasndlkasndlkasndklasdnlk</a>
+
+    <p class="text">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum veritatis
+      fugit ipsum placeat aspernatur eligendi, quaerat accusamus porro voluptate
+      illum, velit numquam quasi quis qui! Dignissimos necessitatibus nam
+      cupiditate provident.
+    </p>
+
+    <p id="A">
+      asdas
+      <span id="B">
+        'l';ll';'
+        <span id="C">
+          qwewqeqwe
+          <span>zxczxcz</span>
+        </span>
+      </span>
+    </p>
+
+    <input
+      class="form-control"
+      placeholder="password"
+      type="password"
+      name=""
+    />
+
+    <div class="button">
+      <button class="success">success</button>
+      <button class="error">error</button>
+    </div>
+  </body>
 </html>
