--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 <body>
+  <!-- це буде проєкт котрого не існує насправді тобто він буде не гарний (проєкт) -->
+  
+  <!-- <button class="buttons">
+    1
+  </button> -->
+
   
 </body>
 </html>
