--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>alivio</title>
   </head>
   <body>
     <header>
-            <nav>
-<ul>
-    <li class="alivio">Alvio</li>
-    <li>Solutions</li>
-    <li>Solutions</li>
-    <li>Solutions</li>
-    <li>Solutions</li>
-</ul>
-            </nav>
+      <h1 class="alivio">Alvio</h1>
+      <nav>
+        <ul>
+          <li>Solutions</li>
+          <li>Solutions</li>
+          <li>Solutions</li>
+          <li>Solutions</li>
+        </ul>
+      </nav>
+      <ul class="sign-in">
+        <li>sign in</li>
+        <li>start free trial
+        </li>
+      </ul>
     </header>
   </body>
 </html>
