--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </nav>
       <ul class="sign-in">
         <li class="not-last">sign in</li>
-        <li>start free trial</li>
+        <li class="last start-free-trial">start free trial</li>
       </ul>
     </header>
   </body>
