end of the hero

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header>
       <!-- <p class="alivio">Alivio</p> -->
-      <svg class="alivio"
+      <svg
+        class="alivio"
         xmlns="http://www.w3.org/2000/svg"
         width="81"
         height="24"
@@ -54,5 +55,14 @@
         <li class="last start-free-trial">start free trial</li>
       </ul>
     </header>
+    <section class="hero">
+      <h1 class="hero-h1">Be aware,<br/> Manage well.</h1>
+      <br />
+      <p class="p hero-text">
+        Everyone experiences stress in different ways. <br/> Let Alivio guide you, in a personalized journal <br/>experience, to overcome your stress.
+      </p>
+      <br/>
+      <button class="hero-button">Find your way</button>
+    </section>
   </body>
 </html>
