sART OF 3 section

--- a/index.html
+++ b/index.html
@@ -56,13 +56,29 @@
       </ul>
     </header>
     <section class="hero">
-      <h1 class="hero-h1">Be aware,<br/> Manage well.</h1>
+      <h1 class="hero-h1">
+        Be aware,<br />
+        Manage well.
+      </h1>
       <br />
       <p class="p hero-text">
-        Everyone experiences stress in different ways. <br/> Let Alivio guide you, in a personalized journal <br/>experience, to overcome your stress.
+        Everyone experiences stress in different ways. <br />
+        Let Alivio guide you, in a personalized journal <br />experience, to
+        overcome your stress.
       </p>
-      <br/>
+      <br />
       <button class="hero-button">Find your way</button>
+    </section>
+    <section class="how-it-works">
+      <h2 class="how-it-works-h2">How it works</h2>
+      <div class="content">
+      <h3 class="understand">
+        Understand & Release <br />
+        the stress in 3 steps
+      </h3>
+
+      <p>Alivio offers as many journals it takes, tackling different areas such as <br/> anxiety, overwhelmedness, sadness, or anger, and a variety of personal<br/>causes, to help you become aware of your emotions, and guide you in how <br/> to manage stress.</p>
+      </div>
     </section>
   </body>
 </html>
