--- a/index.html
+++ b/index.html
@@ -72,12 +72,39 @@
     <section class="how-it-works">
       <h2 class="how-it-works-h2">How it works</h2>
       <div class="content">
-      <h3 class="understand">
-        Understand & Release <br />
-        the stress in 3 steps
-      </h3>
+        <h3 class="understand">
+          Understand & Release <br />
+          the stress in 3 steps
+        </h3>
 
-      <p>Alivio offers as many journals it takes, tackling different areas such as <br/> anxiety, overwhelmedness, sadness, or anger, and a variety of personal<br/>causes, to help you become aware of your emotions, and guide you in how <br/> to manage stress.</p>
+        <p>
+          Alivio offers as many journals it takes, tackling different areas such
+          as <br />
+          anxiety, overwhelmedness, sadness, or anger, and a variety of
+          personal<br />causes, to help you become aware of your emotions, and
+          guide you in how <br />
+          to manage stress.
+        </p>
+      </div>
+
+      <div class="three-steps">
+        <ul class="steps">
+          <li class="step">
+            <img src="./img/3-steps/01.png" alt="" /> <br>
+            <img src="./img/3-steps/p.png" alt="" /> <br>
+            <img src="./img/3-steps/img.png" alt="" /> <br>
+          </li>
+          <li class="step">
+            <img src="./img/3-steps/01.png" alt="" /> <br>
+            <img src="./img/3-steps/p.png" alt="" /> <br>
+            <img src="./img/3-steps/img.png" alt="" /> <br>
+          </li>
+          <li class="step-last">
+            <img src="./img/3-steps/01.png" alt="" /> <br>
+            <img src="./img/3-steps/p.png" alt="" /> <br>
+            <img src="./img/3-steps/img.png" alt="" /> <br>
+          </li>
+        </ul>
       </div>
     </section>
   </body>
