--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <main>
       <picture>
         <source
           srcset="
@@ -36,6 +35,42 @@
           alt="фото співробітника"
         />
       </picture>
-    </main>
   </body>
+<br><br><br><br><br><br><br><br><br><br>
+
+
+  <!-- my code -->
+  <picture>
+    <source
+      srcset="
+      ./img/my-code/my_1x.png 1x,
+      ./img/my-code/my_2x.png 2x,
+      ./img/my-code/my_3x.png 3x
+      "
+      media="(min-width:1200px)"
+    />
+    <!--  -->
+    <!-- <img src="./img/my-code/my_1x.png" alt=""> -->
+    <!--  -->
+    <source
+      srcset="
+      ./img/my-code/my_1x.png 1x,
+      ./img/my-code/my_2x.png 2x,
+      ./img/my-code/my_3x.png 3x
+      "
+      media="(min-width:768px)"
+    />
+    <source
+      srcset="
+      ./img/my-code/my_1x.png 1x,
+      ./img/my-code/my_2x.png 2x,
+      ./img/my-code/my_3x.png 3x
+      "
+      media="(min-width:0px)"
+    />
+    <img
+      src="./img/my-code/my_1x.png 1x"
+      alt="фото співробітника"
+    />
+  </picture>
 </html>
