--- a/index.html
+++ b/index.html
@@ -1,76 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="./css/style.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  </head>
-  <body>
-      <picture>
-        <source
-          srcset="
-            ./img/our-team/mixa/First-desktop-1x.jpg 1x,
-            ./img/our-team/mixa/First-desktop-2x.jpg 2x
-          "
-          media="(min-width:1200px)"
-        />
-        <source
-          srcset="
-            ./img/our-team/mixa/First-tablet-1x.jpg 1x,
-            ./img/our-team/mixa/First-tablet-2x.jpg 2x
-          "
-          media="(min-width:768px)"
-        />
-        <source
-          srcset="
-            ./img/our-team/mixa/First-phone-1x.jpg 1x,
-            ./img/our-team/mixa/First-phone-2x.jpg 2x
-          "
-          media="(min-width:0px)"
-        />
-        <img
-          src="./img/our-team/mixa/First-phone-1x.jpg"
-          alt="фото співробітника"
-        />
-      </picture>
-  </body>
-<br><br><br><br><br><br><br><br><br><br>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <p>Restaurant app</p> <br/>
+                <h1>Why stay hungry when <br/> you can order form Eats </h1> <br/>
+                <p>Order in exchange for hunger</p> <br/>
+                <div class="flexible-buttons">
+                    <button class="but"> Delivery</button>
+                    <button class="but"> Menu</button>
+                </div>
 
-
-  <!-- my code -->
-  <picture>
-    <source
-      srcset="
-      ./img/my-code/my_1x.png 1x,
-      ./img/my-code/my_2x.png 2x,
-      ./img/my-code/my_3x.png 3x
-      "
-      media="(min-width:1200px)"
-    />
-    <!--  -->
-    <!-- <img src="./img/my-code/my_1x.png" alt=""> -->
-    <!--  -->
-    <source
-      srcset="
-      ./img/my-code/my_1x.png 1x,
-      ./img/my-code/my_2x.png 2x,
-      ./img/my-code/my_3x.png 3x
-      "
-      media="(min-width:768px)"
-    />
-    <source
-      srcset="
-      ./img/my-code/my_1x.png 1x,
-      ./img/my-code/my_2x.png 2x,
-      ./img/my-code/my_3x.png 3x
-      "
-      media="(min-width:0px)"
-    />
-    <img
-      src="./img/my-code/my_1x.png 1x"
-      alt="фото співробітника"
-    />
-  </picture>
+            </div>
+        </section>
+    </main>   
+</body>
 </html>
