--- a/index.html
+++ b/index.html
@@ -1,11 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <main>
+      <section class="hero">
+        <ol>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+          <li>
+            <picture>
+              <!-- <img src="./img/tech-1x.webp" alt=""> -->
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:1200px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:768px)"
+              />
+              <source
+                srcset="
+                  ./img/tech-1x.webp 1x,
+                  ./img/tech-2x.webp 2x,
+                  ./img/tech-3x.webp 3x
+                "
+                media="(min-width:0px)"
+              />
+              <img src="./img/tech-1x.webp" alt="фото співробітника" />
+            </picture>
+
+            <h3>Technochryak</h3>
+            <p>web-site</p>
+          </li>
+        </ol>
+      </section>
+    </main>
+  </body>
 </html>
