--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- connecting of botstrap -->
     <link
@@ -17,27 +17,41 @@
     <title>bootstrap</title>
   </head>
   <body>
-    
-    
+    <h4 class="" style="
+    color: #333;
+    text-align: center;
+    font-family: Montserrat;
+    font-weight: 700;
+    ">
+      Meet a partner for your best holiday
+    </h4>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <ul class="nav flex-row justify-content-around align-self-center">
+      <li class="nav-item">
+        <img src="./img/list/person.png" alt="" />
+        <h5>Bradley Hunter</h5>
+        <p>Lorem ipsum dolor sit a</p>
+      </li>
+      <li class="nav-item">
+        <img src="./img/list/person.png" alt="" />
+        <h5>Bradley Hunter</h5>
+        <p>Lorem ipsum dolor sit.</p>
+      </li>
+      <li>
+        <img src="./img/list/person.png" alt="" />
+        <h5>Bradley Hunter</h5>
+        <p>Lorem ipsum dolor sit </p>
+      </li>
+      <li class="nav-item">
+        <img src="./img/list/person.png" alt="" />
+        <h5>Bradley Hunter</h5>
+        <p>Lorem ipsum dolor sit </p>
+      </li>
+    </ul>
+    <button class="button"> 
+      <p class="see_other_partners"> See other partners</p>
+      <!-- <img src="./img/svg/button.svg" alt=""> -->
+    </button>
 
     <!-- connecting of botstrap -->
     <script
