--- a/index.html
+++ b/index.html
@@ -1,45 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <title>restruant app</title>
-    <style>
-        main{
-            background: url(./back.png);
-        }
-    </style>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
     <main>
-      <section class="hero text-center">
-        <h3 class="text-light" style="color: #F6F6F6;
-        font-size: 15px;">Restaurant app</h3>
-        <h1 class="text-light" style="color: #FFF;
-        text-align: center;
-        font-family: Poppins;
-        font-size: 40px;
-        font-style: normal;
-        font-weight: 700;
-        letter-spacing: 0.2px;">Why stay hungry when  <br/> you can order form Eats</h1>
-        <h4 class="text-light">Order in exchange for hunger</h4>
-
-        <button class="btn btn-danger rounded-pill" style="margin-right: 37px;">Delivery</button>
-        <button class="btn btn-outline-light rounded-pill">Menu</button>
-      </section>
+        <section class=""></section>
+        <section class=""></section>
     </main>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</body>
 </html>
