--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="text-box">
               <p class="create-ac">Create an account</p>
               <h3 class="h3-login">Create/login to an existing account to get started</h3>
-              <p>
+              <p class="acount">
                 An account is created with your email and a desired password
               </p>
             </div>
