--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
     <main>
       <section class="app">
         <div class="container">
-          <h2>How the app work</h2>
-          <div class="login">
-            <img src="./img/login.png" alt="" />
+          <h2 class="text-center mb-5 how-h2">How the app work</h2>
+          <div class="login d-flex justify-content-around align-items-center">
+            <img src="./img/login.png" alt=""/>
             <div class="text-box">
               <p class="create-ac">Create an account</p>
-              <h3 class="h3-login">Create/login to an existing account to get started</h3>
+              <h3 class="h3-login">Create/login to an existing <br/> account to get started</h3>
               <p class="acount">
-                An account is created with your email and a desired password
+                An account is created with your email <br/> and a desired password
               </p>
             </div>
           </div>
+
+          <div class="login d-flex justify-content-around align-items-center">
+            <div class="text-box">
+              <p class="create-ac">Create an account</p>
+              <h3 class="h3-login">Create/login to an existing <br/> account to get started</h3>
+              <p class="acount">
+                An account is created with your email <br/> and a desired password
+              </p>
+            </div>
+            <img src="./img/food.png" alt=""/>
+            
+            </div>
         </div>
       </section>
     </main>
