--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
           <div class="login d-flex justify-content-around align-items-center">
             <div class="text-box">
-              <p class="create-ac">Create an account</p>
-              <h3 class="h3-login">Create/login to an existing <br/> account to get started</h3>
+              <p class="create-ac">Explore varieties</p>
+              <h3 class="h3-login">Shop for your favorites <br/>
+                meal as e dey hot.</h3>
               <p class="acount">
-                An account is created with your email <br/> and a desired password
+                Shop for your favorite meals or drinks <br/>
+and enjoy while doing it.
               </p>
             </div>
             <img src="./img/food.png" alt=""/>
