--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <p class="acount">
                 Shop for your favorite meals or drinks <br/>
 and enjoy while doing it.
+<!-- олександру дизреспект -->
               </p>
             </div>
             <img src="./img/food.png" alt=""/>
