--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      
+    </header>
     <main>
       <section class="app">
         <div class="container">
