--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      
-    </header>
+    <header class="d-flex header">
+      <a href="logo-link"><img src="./img/logo.png" alt="logo" class="logo"></a>
+      <nav class="nav">
+          <ul class="d-flex nav-list align-items-center">
+              <li class="active nav-item"><a href="" class="nav-link active-link">Home</a></li>
+              <li class=" nav-item"><a href="" class="nav-link">Product</a></li>
+              <li class=" nav-item"><a href="" class="nav-link">Faq</a></li>
+              <li class=" nav-item"><a href="" class="nav-link">Contact</a></li>
+          </ul>
+      </nav>
+  </header>
     <main>
       <section class="app">
         <div class="container">
@@ -48,6 +56,10 @@ and enjoy while doing it.
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <img src="./img/logo.png" alt="logo" class="" height="50px">
+      <p class="copywright">Copywright 2020 Bella Onojie.com</p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
